--- a/src/components/Lista/Item/ItemStyles.module.scss
+++ b/src/components/Lista/Item/ItemStyles.module.scss
@@ -42,7 +42,7 @@
     background-position: 100% 100%;
 }
 
-.finalizado {
+.completado {
     background: url("../../../assets/finalizado.png");
     background-repeat: no-repeat;
     background-size: 75px;
