--- a/src/components/Lista/ListaStyles.module.scss
+++ b/src/components/Lista/ListaStyles.module.scss
@@ -1,3 +1,11 @@
 .Lista {
     width: 60%;
+    text-align: center;
+    h1{
+        font-size: 24px;
+        color: #EE6983;
+        margin-top: 24px;
+        font-weight: 900;
+        margin-bottom: 32px;
+    }
 }
