--- a/src/pages/AppStyles.module.scss
+++ b/src/pages/AppStyles.module.scss
@@ -2,7 +2,7 @@
     display: flex;
     .sidebarEsquerda {
         width: 60%;
-        height: 930px;
+        height: 100%;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -10,12 +10,11 @@
         padding: 16px 0px;
         box-sizing: content-box;
     }
-    
+
     .sideBarDireita {
         width: 40%;
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        align-items: center;                
+        align-items: center;
     }
 }
